--- a/main.css
+++ b/main.css
@@ -42,22 +42,23 @@ li a {
 }
 
 .nameDiv {
-  display: flex;
+  /* display: flex;
   flex: 1;
-  flex-direction: column;
+  flex-direction: column; */
   padding: 30px 30px;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 h1 {
   font-size: 50px;
   color: white;
-  flex: 2;
+  /* flex: 2; */
 }
 
 h3 {
-  font-size: 30px;
-  flex: 1;
+  font-size: 25px;
+  color: white;
+  /* flex: 1; */
 }
 
 .aboutDiv {
@@ -70,13 +71,13 @@ h3 {
 }
 
 .aboutCol1 {
-  padding: 30px 30px;
   border: 2px solid white;
   flex: 1;
 }
 
-.aboutCol1 h1 {
+.sectionTitle {
   text-align: center;
+  padding: 20px;
 }
 
 .aboutCol1 p {
