--- a/main.css
+++ b/main.css
@@ -1,174 +1,177 @@
-
-html, body {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
+* {
+  box-sizing: border-box;
+  font-family: 'Andika', sans-serif;
 }
 
-ul {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-}
-
-li {
-  padding: 15px;
-  border: 2px solid white;
-  margin: 20px 5px;
-}
-
-li a {
-  color: white;
-  text-decoration: none;
-}
-
-.headNav {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.mainDiv {
-  background-image: url(https://images.unsplash.com/photo-1505562130589-9879683e72da?ixlib=rb-1.2.1&dpr=2&auto=format&fit=crop&w=416&h=312&q=60);
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-
-}
-
-.nameDiv {
-  /* display: flex;
-  flex: 1;
-  flex-direction: column; */
-  padding: 30px 30px;
-  /* justify-content: center; */
-}
-
-h1 {
-  font-size: 50px;
-  color: white;
-  /* flex: 2; */
-}
-
-h3 {
-  font-size: 25px;
-  color: white;
-  /* flex: 1; */
-}
-
-.aboutDiv {
-  height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1536566482680-fca31930a0bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80);
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
-}
-
-.aboutCol1 {
-  border: 2px solid white;
-  flex: 1;
-}
-
-.sectionTitle {
-  text-align: center;
+html {
+  background-color: rgb(255, 253, 247);
   padding: 20px;
 }
 
-.aboutCol1 p {
-  font-size: 25px;
-  margin: 40px;
-  text-align: center;
-  color: bisque;
-}
-
-.aboutCol2 {
-  flex: 1;
-  border: 2px solid white;
-}
-
-.flip {
-  display: inline-block;
-}
-
-.linkFlip:hover .flip{
-    animation: spin-link 0.5s linear forwards;
-}
-
-@keyframes spin-link {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(180deg);
-  }
-}
-
-.experienceDiv {
-  height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1521811628991-7a3ea581f7d1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.skillsDiv {
-  height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1521193089946-7aa29d1fe776?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
-}
-
-.projectDiv {
-  height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1541323429887-2e393b8db71c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
-}
-
-.contactDiv {
-  background-color: black;
-  width: 100vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.growHeight {
+  height: 100%;
   align-items: center;
 }
 
-.experienceCol1,
-.experienceCol2,
-.experienceCol3 {
-  flex: 1;
-  border: 2px dashed white;
+/* Navbar */
+.navbar {
+
+  display: flex;
+  flex-direction: row;
+  height: 8%;
+  background-color: black;
+  align-items: center;
+  
+
+}
+
+.navbar p {
+  padding: 8px;
+  border-bottom: 3px solid red;
+  color: white;
+}
+
+/* Name & Picture page */
+
+.namePage {
+  height: 92vh;
+}
+
+.nameBox {
+  padding: 20px;
+  /* border: 2px solid red; */
+}
+
+.profileImageContainer {
+  width: 250px;
+  height: 250px;
+  margin: auto;
+
+}
+
+.profileImage {
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+
+
+/* About and experience page */
+
+.about p {
+  transform: rotate(90deg);
+}
+
+.experienceMain {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.experienceLogosDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  /* border-right: 2px solid red; */
+}
+
+.logoDiv {
+  position: relative;
+}
+
+.straightRBorder {
+  border-right: 1px solid grey;
+}
+
+.arrowLBorder {
+  height: 10px;
+  width: 10px;
+  background-color: rgb(255, 253, 247); /* MAKE THIS THE SAME AS THE BACKGROUND COLOR */
+  border-left: 1px solid black;
+  border-top: 1px solid black;
+  position: absolute;
+  right: -5px;
+  bottom: 50%;
+  transform: rotate(-45deg)
+}
+
+.logoContainer {
+  width: 100px;
+  height: 100px;
+  margin: 25px;
+}
+
+.tile-padded {
+  padding: 10px;
+}
+
+.pageControl {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 20px;
+}
+
+.pageNum {
+  margin: 10px;
 }
 
 .contact {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.contact a {
   margin: 30px;
+  /* text-decoration: none; */
+  color: black;
 }
 
-.contact p {
+.sIcon {
+ font-size: 4rem;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0 50px;
+  border-left: 1px solid black;
+}
+
+.icon {
+  height:75px;
+  width: 75px;
+  margin: 10px 20px;
+}
+
+.contactPage, .projectsPage {
+  margin-top: 50px;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: black;
+  margin: 10px 0;
+}
+
+footer a {
+  margin: 10px 30px;
   color: white;
-  font-size: 25px;
-}
-
-.contact a img {
-  width: 150px;
-}
-
-@media only screen and (max-width: 840px) {
-  .aboutDiv {
-    flex-direction: column
-  }
-
-  .experienceDiv {
-    flex-direction: column;
-  }
-
-  .contactDiv {
-    flex-direction: column;
-  }
 
 }
 
+
+
+.hidden *, .hidden .is-parent, .hidden {
+  display: none;
+}
