--- a/main.css
+++ b/main.css
@@ -110,24 +110,48 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 20px;
+  margin: 10px 30px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .pageNum {
-  margin: 10px;
+  margin: 0 10px;
+  padding: 15px;
 }
+
+.pageNum a {
+  color: black;
+}
+
+/* Skills and Contact Section */
 
 .contact {
   display: flex;
   flex-direction: column;
-
 }
 
-.contact a {
-  margin: 30px;
-  /* text-decoration: none; */
+.contactIcon {
+  position: relative;
+  margin: 30px auto;
+  text-decoration: none;
   color: black;
 }
+
+
+.contactText {
+  visibility: hidden;
+}
+
+.contactIcon :first-child:hover {
+  color: green;
+}
+
+.contactIcon :first-child:hover ~ .contactText {
+  visibility: visible;
+}
+
+
 
 .sIcon {
  font-size: 4rem;
@@ -146,6 +170,80 @@ html {
   height:75px;
   width: 75px;
   margin: 10px 20px;
+  position: relative;
+}
+
+.icon p {
+  position: absolute;
+  opacity: 0;
+
+}
+
+.icon :first-child:hover {
+  animation: color 0.5s forwards;
+  /* color: rgb(255, 134, 255); */
+}
+
+.icon :first-child:not(:hover) {
+  animation: colorout 0.5s forwards;
+  /* color: rgb(255, 134, 255); */
+}
+
+@keyframes color {
+  0% {
+    color: black;
+  }
+
+  100% {
+    color: rgb(255, 134, 255);
+  }
+}
+
+@keyframes colorout {
+  0% {
+    color: rgb(255, 134, 255);
+  }
+
+  100% {
+    color: black;
+  }
+}
+
+
+.icon :first-child:hover ~ .description {
+  /* display: inline */
+  animation: describe 0.5s forwards;
+}
+
+.icon :first-child:not(:hover) ~ .description {
+  /* display: inline */
+  animation: describeout 0.5s forwards;
+}
+
+@keyframes describe {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes describeout {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.description {
+  pointer-events: none;
+  color: black;
+  font-weight: 900;
 }
 
 .contactPage, .projectsPage {
@@ -170,7 +268,9 @@ footer a {
 
 }
 
-
+.pad {
+  padding: 0 50px;;
+}
 
 .hidden *, .hidden .is-parent, .hidden {
   display: none;
