--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -97,7 +97,8 @@ body {
   justify-content: center;
 
   img {
-    width: 40%;
+    max-width: 40%;
+    max-height: 500px;
     margin: 2%;
     border: 1px solid black;
   }
