--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -96,12 +96,18 @@ body {
   flex-wrap: wrap;
   justify-content: center;
 
-  img {
+  figure {
+
     max-width: 40%;
-    max-height: 500px;
     margin: 2%;
+
+  
+  img {
+    max-height: 100%;
+    max-width: 100%;
     border: 1px solid black;
   }
+}
 }
 
 
@@ -535,8 +541,12 @@ footer a:hover {
     padding: 0 25px;
   }
 
-  .clientImages img, .clientHomePage, .clientProjectDescription {
+  .clientHomePage, .clientProjectDescription {
     width: 90%;
+  }
+
+  .clientImages figure {
+    max-width: 90%;
   }
 
   .features div {
